lab1/Test/L1-A-12-81.output
Error Type A at Line 5
Error Type B at Line 14
Error Type A at Line 32
Error Type A at Line 33
Error Type A at Line 36
Error Type A at Line 41
